testData/ConcordionTest.java
import org.concordion.integration.junit4.ConcordionRunner;
import org.junit.runner.RunWith;

@RunWith(ConcordionRunner.class)
public class ConcordionTest {
    public void greetingFor() {

    }

    <error descr="Unused method in concordion files">public void unusedMethod() {

    }</error>
}